Shift layout issue address in the catalogue, in norrow screens the image were not centered.

--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -455,6 +455,7 @@ with date stored in local storage*/
     display: block;
     max-width: 100%;
     height: auto;
+    margin: auto;
 }
 
 /*Styling footer*/
